# django-release-tracker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  README.md  app.json  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: tox.yml
demo/: release  settings.py  urls.py
demo/settings/: base.py  heroku.py  local.py
heroku_app/: TODO.md  admin.py  api.py  apps.py  github.py  models.py  settings.py
heroku_app/management/commands/: fetch_heroku_releases.py  stash_current_release.py
heroku_app/migrations/: 0001_initial.py  0002_herokurelease_parent.py  0003_auto_20221223_0827.py  0004_herokurelease_release_type.py
release_notes/: apps.py
release_tracker/: admin.py  apps.py  github.py  heroku.py  models.py  settings.py  urls.py  views.py
release_tracker/management/commands/: fetch_heroku_releases.py  stash_current_release.py
release_tracker/migrations/: 0001_initial.py  0002_herokurelease_parent.py  0003_auto_20221223_0827.py  0004_herokurelease_release_type.py  0005_remove_herokurelease_raw_and_more.py  0006_alter_herokurelease_pulled_at_and_more.py
release_tracker/templates/admin/release_tracker/herokurelease/: change_form.html
release_tracker/templates/release_tracker/: release.md
tests/: settings.py  test_my_app.py
