[tool.poetry]
name = "django-heroku-release-tracker"
version = "0.1.0"
description = "Django app for syncing Heroku and Github releases."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-heroku-github-sync"
repository = "https://github.com/yunojuno/django-heroku-github-sync"
documentation = "https://github.com/yunojuno/django-heroku-github-sync"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [{ include = "heroku_app" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2 || ^4.0"
dateparser = "*"
requests = "*"

# optional - Heroku only
dj-database-url = { version = "*", optional = true }
psycopg2 = { version = "*", optional = true }
gunicorn = { version = "*", optional = true }
whitenoise = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-blind-except = "*"
flake8-docstrings = "*"
flake8-logging-format = "*"
flake8-print = "*"
freezegun = "*"
ipython = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"

[tool.poetry.extras]
heroku = ["psycopg2", "gunicorn", "whitenoise", "dj-database-url"]
local = ["whitenoise"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
