[tool.poetry]
name = "django-release-tracker"
version = "0.2.0"
description = "Django app for syncing Heroku and Github releases."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-release-tracker"
repository = "https://github.com/yunojuno/django-release-tracker"
documentation = "https://github.com/yunojuno/django-release-tracker"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "release_tracker" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2 || ^4.0 || ^5.0"
dateparser = "*"
requests = "*"
# optional - Heroku only
dj-database-url = { version = "*", optional = true }
psycopg2 = { version = "*", optional = true }
gunicorn = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
freezegun = "*"
ipython = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
ruff = "*"
tox = "*"
types-requests = "*"
types-dateparser = "*"
whitenoise = "*"

[tool.poetry.extras]
heroku = ["psycopg2", "gunicorn", "whitenoise", "dj-database-url"]
local = ["whitenoise"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
